@@ -24,7 +24,6 @@ package soot.dava.toolkits.base.AST.transformations;
 
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.Iterator;
 
 import soot.BooleanType;
 import soot.ByteType;
@@ -41,7 +40,6 @@ import soot.SootMethod;
 import soot.Type;
 import soot.Value;
 import soot.ValueBox;
-import soot.dava.DavaBody;
 import soot.dava.internal.AST.ASTAggregatedCondition;
 import soot.dava.internal.AST.ASTBinaryCondition;
 import soot.dava.internal.AST.ASTCondition;
@@ -69,23 +67,15 @@ import soot.tagkit.FloatConstantValueTag;
 import soot.tagkit.IntegerConstantValueTag;
 import soot.tagkit.LongConstantValueTag;
 import soot.tagkit.StringConstantValueTag;
-import soot.util.Chain;
-
-//import soot.jimple.internal.*;
-//import soot.grimp.internal.*;
-//import soot.dava.toolkits.base.AST.traversals.*;
-//import soot.dava.toolkits.base.AST.structuredAnalysis.*;
 
 /**
  * Maintained by: Nomair A. Naeem
  */
-
 /**
  * CHANGE LOG: 2nd February 2006:
  *
  */
-
-/*
+/**
  * Both static and non-static BUT FINAL fields if initialized with constants get inlined A final initialized with an object
  * (even if its a string) is NOT inlined e.g. public static final String temp = "hello"; //use of temp will get inlined
  * public static final String temp1 = new String("hello"); //use of temp will NOT get inlined
@@ -105,13 +95,11 @@ import soot.util.Chain;
  * These are the exact places to look for constants...a constant is StringConstant DoubleConstant FloatConstant IntConstant
  * (shortype, booltype, charType intType, byteType LongConstant
  */
-
 public class DeInliningFinalFields extends DepthFirstAdapter {
-  SootClass sootClass = null;
-  SootMethod sootMethod = null;
-  DavaBody davaBody = null;
 
-  HashMap<Comparable, SootField> finalFields;
+  private SootClass sootClass = null;
+  private SootMethod sootMethod = null;
+  private HashMap<Comparable, SootField> finalFields;
 
   // ASTParentNodeFinder parentFinder;
 
@@ -122,90 +110,74 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
     super(verbose);
   }
 
+  @Override
   public void inASTMethodNode(ASTMethodNode node) {
-    DavaBody davaBody = node.getDavaBody();
-    sootMethod = davaBody.getMethod();
+    this.sootMethod = node.getDavaBody().getMethod();
+    this.sootClass = sootMethod.getDeclaringClass();
+    this.finalFields = new HashMap<Comparable, SootField>();
     // System.out.println("Deiniling method: "+sootMethod.getName());
-    sootClass = sootMethod.getDeclaringClass();
 
-    finalFields = new HashMap<Comparable, SootField>();
-
-    ArrayList fieldChain = new ArrayList();
-
-    Chain appClasses = Scene.v().getApplicationClasses();
-    Iterator it = appClasses.iterator();
-    while (it.hasNext()) {
-      SootClass tempClass = (SootClass) it.next();
-      // System.out.println("DeInlining"+tempClass.getName());
-      Chain tempChain = tempClass.getFields();
-      Iterator tempIt = tempChain.iterator();
-      while (tempIt.hasNext()) {
-        fieldChain.add(tempIt.next());
+    ArrayList<SootField> fieldChain = new ArrayList<>();
+    for (SootClass tempClass : Scene.v().getApplicationClasses()) {
+      for (SootField next : tempClass.getFields()) {
+        fieldChain.add(next);
       }
-
     }
-
-    // Iterator fieldIt = sootClass.getFields().iterator();
-    Iterator fieldIt = fieldChain.iterator();
-    while (fieldIt.hasNext()) {
-      SootField f = (SootField) fieldIt.next();
+    // going through fields
+    for (SootField f : fieldChain) {
       if (f.isFinal()) {
-
         // check for constant value tags
         Type fieldType = f.getType();
-        if (fieldType instanceof DoubleType && f.hasTag("DoubleConstantValueTag")) {
-          double val = ((DoubleConstantValueTag) f.getTag("DoubleConstantValueTag")).getDoubleValue();
-          finalFields.put(new Double(val), f);
-        } else if (fieldType instanceof FloatType && f.hasTag("FloatConstantValueTag")) {
-          float val = ((FloatConstantValueTag) f.getTag("FloatConstantValueTag")).getFloatValue();
-          finalFields.put(new Float(val), f);
-        } else if (fieldType instanceof LongType && f.hasTag("LongConstantValueTag")) {
-          long val = ((LongConstantValueTag) f.getTag("LongConstantValueTag")).getLongValue();
-          finalFields.put(new Long(val), f);
-        } else if (fieldType instanceof CharType && f.hasTag("IntegerConstantValueTag")) {
-          int val = ((IntegerConstantValueTag) f.getTag("IntegerConstantValueTag")).getIntValue();
-          finalFields.put(new Integer(val), f);
-        } else if (fieldType instanceof BooleanType && f.hasTag("IntegerConstantValueTag")) {
-          int val = ((IntegerConstantValueTag) f.getTag("IntegerConstantValueTag")).getIntValue();
+        if (fieldType instanceof DoubleType && f.hasTag(DoubleConstantValueTag.NAME)) {
+          double val = ((DoubleConstantValueTag) f.getTag(DoubleConstantValueTag.NAME)).getDoubleValue();
+          finalFields.put(val, f);
+        } else if (fieldType instanceof FloatType && f.hasTag(FloatConstantValueTag.NAME)) {
+          float val = ((FloatConstantValueTag) f.getTag(FloatConstantValueTag.NAME)).getFloatValue();
+          finalFields.put(val, f);
+        } else if (fieldType instanceof LongType && f.hasTag(LongConstantValueTag.NAME)) {
+          long val = ((LongConstantValueTag) f.getTag(LongConstantValueTag.NAME)).getLongValue();
+          finalFields.put(val, f);
+        } else if (fieldType instanceof CharType && f.hasTag(IntegerConstantValueTag.NAME)) {
+          int val = ((IntegerConstantValueTag) f.getTag(IntegerConstantValueTag.NAME)).getIntValue();
+          finalFields.put(val, f);
+        } else if (fieldType instanceof BooleanType && f.hasTag(IntegerConstantValueTag.NAME)) {
+          int val = ((IntegerConstantValueTag) f.getTag(IntegerConstantValueTag.NAME)).getIntValue();
           if (val == 0) {
-            finalFields.put(new Boolean(false), f);
+            finalFields.put(false, f);
           } else {
-            finalFields.put(new Boolean(true), f);
+            finalFields.put(true, f);
           }
         } else if ((fieldType instanceof IntType || fieldType instanceof ByteType || fieldType instanceof ShortType)
-            && f.hasTag("IntegerConstantValueTag")) {
-          int val = ((IntegerConstantValueTag) f.getTag("IntegerConstantValueTag")).getIntValue();
-          finalFields.put(new Integer(val), f);
-        } else if (f.hasTag("StringConstantValueTag")) {
-          String val = ((StringConstantValueTag) f.getTag("StringConstantValueTag")).getStringValue();
+            && f.hasTag(IntegerConstantValueTag.NAME)) {
+          int val = ((IntegerConstantValueTag) f.getTag(IntegerConstantValueTag.NAME)).getIntValue();
+          finalFields.put(val, f);
+        } else if (f.hasTag(StringConstantValueTag.NAME)) {
+          String val = ((StringConstantValueTag) f.getTag(StringConstantValueTag.NAME)).getStringValue();
           // System.out.println("adding string constant"+val);
           finalFields.put(val, f);
         }
       } // end if final
-    } // going through fields
+    }
   }
 
   /*
    * StringConstant DoubleConstant FloatConstant IntConstant (shortype, booltype, charType intType, byteType LongConstant
    */
   private boolean isConstant(Value val) {
-    if (val instanceof StringConstant || val instanceof DoubleConstant || val instanceof FloatConstant
-        || val instanceof IntConstant || val instanceof LongConstant) {
-      return true;
-    }
-    return false;
+    return val instanceof StringConstant || val instanceof DoubleConstant || val instanceof FloatConstant
+        || val instanceof IntConstant || val instanceof LongConstant;
   }
 
   /*
    * Notice as things stand synchblocks cant have the use of a SootField
    */
+  @Override
   public void inASTSynchronizedBlockNode(ASTSynchronizedBlockNode node) {
     // hence nothing is implemented here
   }
 
   public void checkAndSwitch(ValueBox valBox) {
     Value val = valBox.getValue();
-
     Object finalField = check(val);
     if (finalField != null) {
       // System.out.println("Final field with this value exists"+finalField);
@@ -214,7 +186,6 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
        * If the final field belongs to the same class then we should supress declaring class
        */
       SootField field = (SootField) finalField;
-
       if (sootClass.declaresField(field.getName(), field.getType())) {
         // this field is of this class so supress the declaring class
         if (valBox.canContainValue(new DStaticFieldRef(field.makeRef(), true))) {
@@ -225,7 +196,6 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
           valBox.setValue(new DStaticFieldRef(field.makeRef(), false));
         }
       }
-
     }
     // else
     // System.out.println("Final field not found");
@@ -241,54 +211,49 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
       if (val instanceof StringConstant) {
         String myString = ((StringConstant) val).toString();
         myString = myString.substring(1, myString.length() - 1);
-        // System.out.println("looking for:"+myString);
         finalField = finalFields.get(myString);
       } else if (val instanceof DoubleConstant) {
-        String myString = ((DoubleConstant) val).toString();
-
-        finalField = finalFields.get(new Double(myString));
+        finalField = finalFields.get(((DoubleConstant) val).value);
       } else if (val instanceof FloatConstant) {
-        String myString = ((FloatConstant) val).toString();
-
-        finalField = finalFields.get(new Float(myString));
+        finalField = finalFields.get(((FloatConstant) val).value);
       } else if (val instanceof LongConstant) {
-        String myString = ((LongConstant) val).toString();
-
-        finalField = finalFields.get(new Long(myString.substring(0, myString.length() - 1)));
+        finalField = finalFields.get(((LongConstant) val).value);
       } else if (val instanceof IntConstant) {
         String myString = ((IntConstant) val).toString();
         if (myString.length() == 0) {
           return null;
         }
 
-        Type valType = ((IntConstant) val).getType();
-
-        Integer myInt = null;
+        Integer myInt;
         try {
           if (myString.charAt(0) == '\'') {
             // character
             if (myString.length() < 2) {
               return null;
             }
-
-            myInt = new Integer(myString.charAt(1));
+            myInt = Integer.valueOf(myString.charAt(1));
           } else {
-            myInt = new Integer(myString);
+            myInt = Integer.valueOf(myString);
           }
         } catch (Exception e) {
           // System.out.println("exception occured...gracefully exitting method..string was"+myString);
           return finalField;
         }
 
+        Type valType = ((IntConstant) val).getType();
         if (valType instanceof ByteType) {
           finalField = finalFields.get(myInt);
         } else if (valType instanceof IntType) {
-          if (myString.equals("false")) {
-            finalField = finalFields.get(new Boolean(false));
-          } else if (myString.equals("true")) {
-            finalField = finalFields.get(new Boolean(true));
-          } else {
-            finalField = finalFields.get(myInt);
+          switch (myString) {
+            case "false":
+              finalField = finalFields.get(false);
+              break;
+            case "true":
+              finalField = finalFields.get(true);
+              break;
+            default:
+              finalField = finalFields.get(myInt);
+              break;
           }
         } else if (valType instanceof ShortType) {
           finalField = finalFields.get(myInt);
@@ -304,6 +269,7 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
    * Hence the some what indirect approach........notice we will work with valueBoxes so that by changing the value in the
    * value box we can deInline any field
    */
+  @Override
   public void inASTSwitchNode(ASTSwitchNode node) {
     Value val = node.get_Key();
 
@@ -315,35 +281,30 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
       return;
     }
     // val is not a constant but it might have other constants in it
-
-    Iterator it = val.getUseBoxes().iterator();
-    while (it.hasNext()) {
-      ValueBox tempBox = (ValueBox) it.next();
+    for (ValueBox tempBox : val.getUseBoxes()) {
       // System.out.println("Checking useBox of switch key");
       checkAndSwitch(tempBox);
     }
   }
 
+  @Override
   public void inASTStatementSequenceNode(ASTStatementSequenceNode node) {
     for (AugmentedStmt as : node.getStatements()) {
       Stmt s = as.get_Stmt();
-      Iterator tempIt = s.getUseBoxes().iterator();
-      while (tempIt.hasNext()) {
-        ValueBox tempBox = (ValueBox) tempIt.next();
+      for (ValueBox tempBox : s.getUseBoxes()) {
         // System.out.println("Checking useBox of stmt");
         checkAndSwitch(tempBox);
       }
     }
   }
 
+  @Override
   public void inASTForLoopNode(ASTForLoopNode node) {
 
     // checking uses in init
     for (AugmentedStmt as : node.getInit()) {
       Stmt s = as.get_Stmt();
-      Iterator tempIt = s.getUseBoxes().iterator();
-      while (tempIt.hasNext()) {
-        ValueBox tempBox = (ValueBox) tempIt.next();
+      for (ValueBox tempBox : s.getUseBoxes()) {
         // System.out.println("Checking useBox of init stmt");
         checkAndSwitch(tempBox);
       }
@@ -356,9 +317,7 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
     // checking uses in update
     for (AugmentedStmt as : node.getUpdate()) {
       Stmt s = as.get_Stmt();
-      Iterator tempIt = s.getUseBoxes().iterator();
-      while (tempIt.hasNext()) {
-        ValueBox tempBox = (ValueBox) tempIt.next();
+      for (ValueBox tempBox : s.getUseBoxes()) {
         // System.out.println("Checking useBox of update stmt");
         checkAndSwitch(tempBox);
       }
@@ -376,9 +335,7 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
     } else if (cond instanceof ASTBinaryCondition) {
       // get uses from binaryCondition
       Value val = ((ASTBinaryCondition) cond).getConditionExpr();
-      Iterator tempIt = val.getUseBoxes().iterator();
-      while (tempIt.hasNext()) {
-        ValueBox tempBox = (ValueBox) tempIt.next();
+      for (ValueBox tempBox : val.getUseBoxes()) {
         // System.out.println("Checking useBox of binary condition");
         checkAndSwitch(tempBox);
       }
@@ -388,6 +345,7 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
   /*
    * The condition of an if node can use a local
    */
+  @Override
   public void inASTIfNode(ASTIfNode node) {
     ASTCondition cond = node.get_Condition();
     checkConditionalUses(cond, node);
@@ -396,6 +354,7 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
   /*
    * The condition of an ifElse node can use a local
    */
+  @Override
   public void inASTIfElseNode(ASTIfElseNode node) {
     ASTCondition cond = node.get_Condition();
     checkConditionalUses(cond, node);
@@ -404,6 +363,7 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
   /*
    * The condition of a while node can use a local
    */
+  @Override
   public void inASTWhileNode(ASTWhileNode node) {
     ASTCondition cond = node.get_Condition();
     checkConditionalUses(cond, node);
@@ -412,6 +372,7 @@ public class DeInliningFinalFields extends DepthFirstAdapter {
   /*
    * The condition of a doWhile node can use a local
    */
+  @Override
   public void inASTDoWhileNode(ASTDoWhileNode node) {
     ASTCondition cond = node.get_Condition();
     checkConditionalUses(cond, node);
